<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">云溯个人版</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="tab_message">消息</string>
    <string name="tab_history">历史记录</string>
    <string name="tab_scan">扫一扫</string>
    <string name="tab_find">发现</string>
    <string name="tab_profile">我</string>
    <string name="back">返回</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="scan_failed">扫描失败，请重试。</string>
    <string name="original_info">原始信息</string>
    <string name="detail_info">详细信息</string>
    <string name="scan_result">扫描结果</string>
    <string name="network_not_available">请检查网络连接</string>
    <string name="pull_to_refresh_pull_label">下拉刷新...</string>
    <string name="pull_to_refresh_release_label">松开刷新...</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_tap_label">点击加载...</string>
    <string name="hint_search">搜索</string>
    <string name="find_tag">标签</string>
    <string name="company_member">企业会员</string>
    <string name="activity">活动</string>
    <string name="popular">热门</string>
    <string name="nearby">周边</string>
    <string name="my_scan">我的扫描</string>
    <string name="my_credits">我的积分</string>
    <string name="my_favorite">我的收藏</string>
    <string name="settings">设置</string>
    <string name="todo">开发中</string>
    <string name="load_failed">加载失败</string>
    <string name="backpress_to_exit">再按一次返回键退出</string>
    <string name="scan_result_tip">云溯温馨提示：</string>
    <string name="verify_code_loading">查询中...</string>
    <string name="rfid_tip">请将手机靠近标签</string>
    <string name="rfid_enable">请开启NFC功能</string>
    <string name="demo_scan_result">此商品为真品</string>
    <string name="demo_scan_desc">此商品在保质期内，请放心使用。</string>
    <string name="nfc_not_supported">本手机不支持NFC</string>
    <string name="nfc_enable_title">开启NFC功能</string>
    <string name="nfc_enable_message">是否开启NFC功能？</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    
    <!-- Locaiton  -->
    <string name="enable_location_title">开启位置服务</string>
    <string name="enable_location_message">为了更好地验证物品的真假，串货等，请务必开启位置服务。</string>
    <string name="location_ok">好的</string>
    <string name="location_no">暂时不</string>
    
    <!-- enterprise  -->
    <string name="enterprise_home">首页</string>
    <string name="enterprise_settings">设置</string>
    <string name="enterprise_about">关于云溯</string>
    <string name="enterprise_demo_title">XX药业</string>
    
    
    <string name="enterprise_product_analytics">生产分析</string>
    <string name="enterprise_marketing_management">营销管理</string>
    <string name="enterprise_tag_management">标签管理</string>
    <string name="enterprise_fleeing_analytics">串货分析</string>
    <string name="enterprise_customer_analytics">消费者分析</string>
    <string name="enterprise_logistics_analytics">物流分析</string>
    <string name="enterprise_warning">预警</string>
    <string name="enterprise_dashboard">实时看板</string>
    <string name="loading">加载中...</string>
    <string name="enterprise_app_name">我瞅瞅企业版</string>
     <!-- enterprise  -->
     
     <string name="product_detail_basic">基本信息</string>
     <string name="product_scan_info">扫描信息</string>
     <string name="product_tracking">物流跟踪</string>
     <string name="product_barcode">商品码</string>
     <string name="product_name">物品名称</string>
     <string name="product_desc">商品描述</string>
     

</resources>