<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E7E7E7"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/rl_search_area"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#E7E7E7"
            android:padding="10dp" >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border_item_single"
                android:drawableLeft="@drawable/ic_find_search_icon"
                android:drawablePadding="10dp"
                android:fontFamily="sans-serif-light"
                android:hint="@string/hint_search"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="#606060"
                android:textColorHint="#B7B7B7" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_tag_area"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/item_bg_bottom"
            android:padding="10dp" android:clickable="true" >

            <ImageView
                android:id="@+id/iv_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_find_tag" />

            <TextView
                style="@style/text_style.light"
                android:layout_centerVertical="true"
                android:layout_marginLeft="0dp"
                android:layout_toEndOf="@id/iv_tag"
                android:text="@string/find_tag"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_company_area"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/item_bg_bottom"
            android:padding="10dp" android:clickable="true">

            <ImageView
                android:id="@+id/iv_comany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_find_company" />

            <TextView
                style="@style/text_style.light"
                android:layout_centerVertical="true"
                android:layout_marginLeft="0dp"
                android:layout_toEndOf="@id/iv_comany"
                android:text="@string/company_member"
                android:textSize="18sp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/rl_items_1"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/find_item_bg_normal"
            android:orientation="horizontal"
            android:padding="10dp" >

            <RelativeLayout
                android:id="@+id/rl_activity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/tv_activity"
                    style="@style/text_style.light"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/activity" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_above="@id/tv_activity"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_find_activity" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_popular"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/tv_popular"
                    style="@style/text_style.light"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/popular" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_above="@id/tv_popular"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_find_popular" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_nearby"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/tv_nearby"
                    style="@style/text_style.light"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/nearby" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_above="@id/tv_nearby"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_find_nearby" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rl_items_2"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@drawable/find_item_bg_bottom_normal"
            android:orientation="horizontal"
            android:padding="10dp" >

            <RelativeLayout
                android:id="@+id/rl_activity2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/tv_activity2"
                    style="@style/text_style.light"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/activity" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_above="@id/tv_activity2"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_find_activity2" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_popular2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/tv_popular2"
                    style="@style/text_style.light"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/popular" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_above="@id/tv_popular2"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_find_popular2" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_nearby2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/tv_nearby2"
                    style="@style/text_style.light"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/nearby" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_above="@id/tv_nearby2"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_find_nearby2" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>